5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1644_869.log
== TEST (2019-04-09 17:59:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor=float(input( "qual foi o valor da compra" ))
if(valor>=200):
	preço = valor*0.05
else:
	preço = valor
print(preço)

-- OUTPUT:
10.0045
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:59:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor=float(input( "qual foi o valor da compra" ))
if(valor>=200):
	preço = valor*0.05
else:
	preço = valor
print(preço)

-- OUTPUT:
10.0045
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:59:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor=float(input( "qual foi o valor da compra" ))
if(valor>=200):
	preço = valor*0.05
else:
	preço = valor
print(preço)

-- EXECUTION TIME:
0.17857
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
10.0045
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
10.0265
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:00:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor=float(input( "qual foi o valor da compra" ))
if(valor>=200):
	= valor*0.05
else:
	preço = valor
print(preço)

-- ERROR:
File "XXXX", line 6
    = valor*0.05
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:00:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor=float(input( "qual foi o valor da compra" ))
if(valor>=200):
	=valor*0.05
else:
	preço = valor
print(preço)

-- ERROR:
File "XXXX", line 6
    =valor*0.05
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 15:59:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor=float(input( "qual foi o valor da compra" ))
if(valor=<200):
	=valor*0.05
else:
	preço = valor
print(preço)

-- EXECUTION TIME:
0.157228
-- ERROR:
  File "/home/codebench/codes/1644/869/main.py", line 5
    if(valor=<200):
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:00:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor=float(input( "qual foi o valor da compra" ))
if(valor>=200):
	=valor*0.05
else:
	preço = valor
print(preço)

-- ERROR:
File "XXXX", line 6
    =valor*0.05
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:01:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor=float(input( "qual foi o valor da compra" ))
if(valor>=200):
	= valor*0.05
else:
	preço = valor
print(preço)

-- ERROR:
File "XXXX", line 6
    = valor*0.05
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:04:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor=float(input( "qual foi e o valor da compra" ))
if(compar < 200.00):
	mensagem = compras
else:
	mensagem = compras - compras/100*5
print(round(mensagem,2)
-- ERROR:
File "XXXX", line 10
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:04:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor=float(input( "qual foi e o valor da compra" ))
if(compar < 200.00):
	mensagem = compras
else:
	mensagem = compras - compras/100*5
print( round( mensagem,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(compar < 200.00):
NameError: name 'compar' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:05:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor=float(input( "qual foi e o valor da compra" ))
if(compar < 200.00):
	mensagem = compras
else:
	mensagem = compras - compras/100*5
print( round( mensagem,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(compar < 200.00):
NameError: name 'compar' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:05:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor=float(input( "qual foi e o valor da compra" ))
if(compras 200.00):
	mensagem = compras
else:
	mensagem = compras - compras/100*5
print( round( mensagem,2))
-- ERROR:
File "XXXX", line 5
    if(compras 200.00):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:05:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor=float(input( "qual foi e o valor da compra" ))
if(compras>200.00):
	mensagem = compras
else:
	mensagem = compras - compras/100*5
print( round( mensagem,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(compras>200.00):
NameError: name 'compras' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:06:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor=float(input( "qual foi e o valor da compra" ))
if(compras<200.00):
	mensagem = compras
else:
	mensagem = compras - compras/100*5
print( round( mensagem,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(compras<200.00):
NameError: name 'compras' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:06:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor=float(input( "qual foi e o valor da compra" ))
if(compras < 200)
	mensagem = compras
else:
	mensagem = compras - compras/100*5
print( round( mensagem,2))
-- ERROR:
File "XXXX", line 5
    if(compras < 200)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:06:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor=float(input( "qual foi e o valor da compra" ))
if(compras < 200 ):
	mensagem = compras
else:
	mensagem = compras - compras/100*5
print( round( mensagem,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(compras < 200 ):
NameError: name 'compras' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:07:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor=float(input( "qual foi e o valor da compra" ))
if(valor < 200.00 ):
	mensagem = valor
else:
	mensagem = valor - valor/100*5
print( round( mensagem,2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:08:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valor=float(input( "qual foi e o valor da compra" ))
if(valor < 200.00 ):
	mensagem = valor
else:
	mensagem = valor - valor/100*5
print( round( mensagem,2))
-- EXECUTION TIME:
0.148827
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
